
    CHANGE: Update internal copy ImGui to 1.84 (WIP) (3512f2c2c283ec86) (#107)
        Internal copy has two PR's merged:
            https://github.com/thedmd/imgui/tree/feature/layout      - used in blueprints example only
            https://github.com/thedmd/imgui/tree/feature/extra-keys  - optional: used by Node Editor if present

    NEW: All source components are now versioned

    NEW: Make view state independent of window resolution.

    NEW: Editor can now break links connected specified node or pin
        New API:
        int BreakLinks(NodeId nodeId);
        int BreakLinks(PinId pinId);

    NEW: Editor can now tell if node or pin has any links attached
        New API:
        bool HasAnyLinks(NodeId nodeId);
        bool HasAnyLinks(PinId pinId);

    NEW: Editor can be queried if particular node or link is selected
        New API:
        bool IsNodeSelected(NodeId nodeId);
        bool IsLinkSelected(LinkId linkId);

    NEW: Editor now can return pins of the link
        New API:
        bool GetLinkPins(LinkId linkId, PinId* startPinId, PinId* endPinId);

        `startPinId` and `endPinId` may be null if caller is not interested
        in particular id.

    NEW: Editor now return ids of hovered node/pin/link
        New API:
        NodeId GetHoveredNode();
        PinId GetHoveredPin();
        LinkId GetHoveredLink();

    NEW: Add SetGroupSize() to explicitly set group size
        New API:
        void SetGroupSize(NodeId nodeId, const ImVec2& size);

    NEW: crude_json: Add save() and load()

        When CRUDE_JSON_IO == 1 value will have load() and save()
        function implemented using stdio.h FILE.

    NEW: crude_json: Add erase() and get_ptr()

    NEW: Application overhaul
        - Convert from function based to inheritable class
        - Add ability to close app and change title from code
        - Add ability to control main window flags (ex. show menubar)
        - Save ImGui state to ini file